second version du projet gestion des tickets